# python-project-lvl2

./: .coveragerc  .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
gendiff/: cli.py  gendiff.py  parsers.py
gendiff/format/: __init__.py  default.py  plain.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
tests/fixtures/: file1.yaml  file2.yaml  json.txt
